[package]
name = "speer"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/jk20342/speer-rust"
homepage = "https://github.com/jk20342/speer-rust"
description = "safe rust wrapper for speer"
exclude = [".github/**"]

[features]
default = ["build-from-source"]
build-from-source = ["speer-sys/build-from-source"]
full-chat = ["speer-sys/full-chat"]
libp2p-tcp = ["speer-sys/libp2p-tcp"]
static = ["speer-sys/static"]

[dependencies]
speer-sys = { version = "0.1.0", path = "../speer-sys", default-features = false }
