[package]
name = "speer"
version = "0.2.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/jk20342/speer-rust"
homepage = "https://github.com/jk20342/speer-rust"
description = "safe rust wrapper for speer"
documentation = "https://docs.rs/speer"
exclude = [".github/**"]

[package.metadata.docs.rs]
features = ["full-chat"]

[features]
default = ["build-from-source"]
build-from-source = ["speer-sys/build-from-source"]
full-chat = ["speer-sys/full-chat"]
libp2p-identify = ["speer-sys/libp2p-identify"]
libp2p-kad = ["speer-sys/libp2p-kad", "libp2p-identify", "libp2p-tcp"]
libp2p-tcp = ["speer-sys/libp2p-tcp"]
static = ["speer-sys/static"]

[dependencies]
speer-sys = { version = "0.2.1", path = "../speer-sys", default-features = false }
